On the services ynl the twig.config: needs abstract: true

--- a/live.services.yml
+++ b/live.services.yml
@@ -4,7 +4,7 @@
 # 'example.settings.local.php' file, which sits next to this file.
 services:
   twig.config:
-    abstract: false
+    abstract: true
     # Twig debugging:
     # @default false
     debug: false
